@@ -1,9 +1,21 @@
 language: c
-install: wget https://raw.githubusercontent.com/ocaml/ocaml-travisci-skeleton/master/.travis-opam.sh
-script: bash -ex .travis-opam.sh
-sudo: required
+sudo: false
+services:
+  - docker
+install: wget https://raw.githubusercontent.com/ocaml/ocaml-ci-scripts/master/.travis-docker.sh
+script: bash ./.travis-docker.sh
 env:
-  - PACKAGE="opam-depext" OCAML_VERSION=latest POST_INSTALL_HOOK="opam depext async_ssl"
-  - PACKAGE="opam-depext" OCAML_VERSION=4.01   POST_INSTALL_HOOK="opam depext mirage"
-  - PACKAGE="opam-depext" OCAML_VERSION=4.00   POST_INSTALL_HOOK="opam depext ssl"
-  - PACKAGE="opam-depext" OCAML_VERSION=3.12   POST_INSTALL_HOOK="opam depext pcre"
+ global:
+   - PACKAGE="depextx"
+   - PRE_INSTALL_HOOK="opam install -y ocamlfind && opam config exec make && /repo/opam-depext --version && /repo/opam-depext -i ssl pcre"
+ matrix:
+   - DISTRO=debian-stable OCAML_VERSION=4.01.0
+   - DISTRO=debian-testing OCAML_VERSION=4.00.1
+   - DISTRO=debian-unstable OCAML_VERSION=4.02.3
+   - DISTRO=ubuntu-12.04 OCAML_VERSION=4.01.0
+   - DISTRO=ubuntu-15.10 OCAML_VERSION=4.02.3
+   - DISTRO=ubuntu-16.04 OCAML_VERSION=4.02.3
+   - DISTRO=centos-6 OCAML_VERSION=4.01.0
+   - DISTRO=centos-7 OCAML_VERSION=4.02.3
+   - DISTRO=fedora-23 OCAML_VERSION=4.02.3
+   - DISTRO=alpine-3.3 OCAML_VERSION=4.02.3
